--- a/package.json
+++ b/package.json
@@ -1,62 +1,40 @@
 {
-  "name": "hrportal-test",
+  "name": "hrportal-front",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Vladimir Babaev",
+  "author": "VladimirAB",
   "license": "ISC",
-  "dependencies": {
-    "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.1.0",
-    "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.1.1",
-    "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.1.0",
-    "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.1.0",
-    "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-beta.1.1.1",
-    "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-beta.1.1.1",
-    "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-beta.1.1.3",
-    "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1.1.0",
-    "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-beta.1.1.0",
-    "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.1.0",
-    "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.0.1",
-    "fetch": "github:github/fetch@^0.10.1",
-    "text": "github:systemjs/plugin-text@^0.0.4"
-  },
-  "devDependencies": {
-    "dialog-polyfill": "^0.4.3",
-    "gulp": "*",
-    "gulp-autoprefixer": "*",
-    "gulp-concat": "*",
-    "gulp-jshint": "*",
-    "gulp-minify-css": "*",
-    "gulp-rename": "*",
-    "gulp-sass": "*",
-    "gulp-uglify": "*",
-    "jshint": "*",
-    "jspm": "^0.16.35",
-    "material-design-lite": "^1.1.3",
-    "mdi": "^1.6.50"
-  },
-  "overrides": {
-    "npm:core-js@2.0.3": {
-      "main": "client/shim.min"
-    }
-  },
   "jspm": {
     "dependencies": {
-      "datejs/Datejs": "github:datejs/Datejs@master",
-      "moment/moment": "github:moment/moment@^2.13.0"
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.2.1",
+      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.2.5",
+      "genadis/aurelia-mdl": "github:genadis/aurelia-mdl@0.1.0",
+      "jquery": "npm:jquery@^2.2.4",
+      "lodash": "npm:lodash@^4.13.1",
+      "moment": "npm:moment@^2.13.0"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
       "core-js": "npm:core-js@^1.1.4"
-    },
-    "overrides": {
-      "npm:core-js@2.0.3": {
-        "main": "client/shim.min"
-      }
     }
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "*",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.1",
+    "gulp-uglify": "^1.5.3",
+    "jshint": "^2.9.2",
+    "jspm": "^0.16.36",
+    "material-design-lite": "^1.1.3",
+    "mdi": "^1.6.50"
   }
 }
