--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "jspm": {
     "dependencies": {
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.2.1",
+      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.2.5",
       "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.2.5",
+      "aurelia-http-client": "npm:aurelia-http-client@^1.0.0-beta.1.2.2",
       "genadis/aurelia-mdl": "github:genadis/aurelia-mdl@0.1.0",
       "jquery": "npm:jquery@^2.2.4",
       "lodash": "npm:lodash@^4.13.1",
@@ -24,6 +26,7 @@
     }
   },
   "devDependencies": {
+    "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
