--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "genadis/aurelia-mdl": "github:genadis/aurelia-mdl@0.1.0",
       "jquery": "npm:jquery@^2.2.4",
       "lodash": "npm:lodash@^4.13.1",
+      "material-design-lite": "github:google/material-design-lite@^1.1.3",
       "moment": "npm:moment@^2.13.0"
     },
     "devDependencies": {
